# minisynth-qt

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tonesynth.cpp  tonesynth.h
docs/: index.html  minisynth-qt.html  minisynth-qt.js
